<resources>
    <string name="app_name">Workout Journal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="action_next_day">Next Day</string>
    <string name="action_previous_day">Previous Day</string>

    <!--Journal-->
    <string name="no_lifts">No lifts save for this day.\n\n Tap the + button to add a lift</string>
    <string name="today">Today</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="pref_title_unit_system">Unit System</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="search">Search</string>
    <string name="exercise_name">Exercise name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="move_rep_position">Move Rep Position</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="sets">Sets</string>
    <string name="weight_lifted">Weight Lifted</string>
    <string name="reps_performed">Reps Performed</string>
    <string-array name="pref_unit_list_titles">
        <item>Imperial (lb)</item>
        <item>Metric (kg)</item>
    </string-array>
    <string-array name="pref_unit_list_values">
        <item>lbs</item>
        <item>kgs</item>
    </string-array>

    <string-array name="exercise_body">
        <item>Chest</item>
        <item>Triceps</item>
        <item>Biceps</item>
        <item>Forearm</item>
        <item>Shoulders</item>
        <item>Back</item>
        <item>Legs</item>
        <item>Abs</item>
        <item>Cardio</item>
        <item>Weights and reps</item>
        <item>Other</item>
    </string-array>

    <string-array name="exercise_type">
        <item>Weights and reps</item>
        <item>Reps only</item>
        <item>Cardio</item>
    </string-array>

    <string-array name="reps_array">
        <item>2 Reps</item>
        <item>3 Reps</item>
        <item>4 Reps</item>
        <item>5 Reps</item>
        <item>6 Reps</item>
        <item>7 Reps</item>
        <item>8 Reps</item>
        <item>9 Reps</item>
        <item>10 Reps</item>
        <item>11 Reps</item>
        <item>12 Reps</item>
    </string-array>
    <string name="_1rm">1RM</string>
    <string name="action_one_rep_max_calculator">1RM Calculator</string>
    <string name="percentage_calculator">Percentage Calculator</string>
    <string name="create_workout_plan">Build Routine</string>
    <string name="workout_plan">Workout plan</string>
    <string name="today_s_plan">Workout Plan/Routine</string>
    <string name="add_plan">Add Plan</string>
    <string name="add_routine">Add Routine</string>


    <string-array name="days_per_week">
        <item>1 day per week</item>
        <item>2 days per week</item>
        <item>3 days per week</item>
        <item>4 days per week</item>
        <item>5 days per week</item>
        <item>6 days per week</item>
        <item>7 days per week</item>
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="exercises">Exercises</string>
</resources>
