<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="repEntity"
            type="eh.workout.journal.com.workoutjournal.db.entinty.JournalRepEntity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:background="@color/ColorPrimaryMedium"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/sets"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible" />

        <Space
            android:id="@+id/spacer1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".2"
            android:visibility="gone" />

        <TextView
            android:id="@+id/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/reps"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Space
            android:id="@+id/spacer2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight=".4"
            android:visibility="gone" />

        <TextView
            android:id="@+id/repMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Space
            android:layout_width="12dp"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/pb"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="PB"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <Space
            android:layout_width="12dp"
            android:layout_height="1dp" />
    </LinearLayout>
</layout>